<resources>
    <string name="app_name">Учет физической активности</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Назад</string>

    <string name="message_text">Добавление активности</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date">Дата</string>
    <string name="activity_caption">Время/кол-во</string>
    <string name="pick_date">Выбрать дату</string>
    <string name="empty_text">Список пуст</string>
    <string name="text_total_activity">Всего активностей: %s</string>
    <string name="text_sum_activity">Сумма активностей: %s</string>
    <string name="text_total_callories">Каллорий сожжено: %.2f</string>

    <string name="desc_activity_caption">Описание активности</string>

    <string-array name="activity_types">
        <item>SWIM|Плавание</item>
        <item>RUN|Бег</item>
        <item>PULL_UP|Подтягивание</item>
    </string-array>
</resources>